add some elements

--- a/components/arrows.tex
+++ b/components/arrows.tex
@@ -1,1 +1,2 @@
-\draw[stealth-stealth, line width=5pt](env) to node[right]{Double-edged sword}  (meta);
+\draw[stealth-stealth, line width=5pt](env) to node[right]{Double-edged sword}  (active);
+% \path (rep) to [circle connection bar switch color=from (beige) to (beige)] (short);
