--- a/components/pramble.tex
+++ b/components/pramble.tex
@@ -2,4 +2,7 @@
 \usepackage{tikz, incgraph}
 \usetikzlibrary{mindmap, shadows, decorations.text}
 \definecolor{beige}{rgb}{.96, .96, .88}
+\definecolor{beige1}{rgb}{.96, .96, .88}
+\definecolor{beige2}{rgb}{.96, .96, .88}
+\definecolor{beige3}{rgb}{.96, .80, .88}
 \igrset{border=4cm}
